# kstd-platform

./: .clang-tidy  .gitmodules  CMakeLists.txt  README.md  install_deps.sh
.github/workflows/: develop.yml  master.yml
include/kstd/platform/: dns.hpp  dynamic_lib.hpp  file.hpp  file_handle.hpp  file_mapping.hpp  memory.hpp  memory_mapping.hpp  named_mapping.hpp  network.hpp  platform.hpp  process.hpp  process_handle.hpp  wireless.hpp
src/: dynamic_lib.cpp  file.cpp  file_mapping.cpp  named_mapping.cpp  process.cpp
src/linux/: dns.cpp  dynamic_lib.cpp  file.cpp  file_mapping.cpp  network.cpp  platform.cpp  process.cpp  wireless.cpp
src/macos/: dns.cpp  dynamic_lib.cpp  file.cpp  file_mapping.cpp  network.cpp  platform.cpp  process.cpp
src/windows/: dns.cpp  dynamic_lib.cpp  file.cpp  file_mapping.cpp  network.cpp  platform.cpp  process.cpp  wireless.cpp
test/: test_dns.cpp  test_dynamic_lib.cpp  test_file.cpp  test_file_handle.cpp  test_file_mapping.cpp  test_memory.cpp  test_named_mapping.cpp  test_network.cpp  test_process.cpp  test_resolver.cpp
